--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <div class="main_info2">
                 21 год (12.01.2001)
             </div>
+            <div style="font-size: 16px" class="main_info2">
+                8-904-668-50-31
+            </div>
+            <div style="font-size: 16px" class="main_info2">
+                131313pasha@mail.ru
+            </div>
         </div>
         <div class="main_photo">
             <img src="images/20210208_145123.jpg" alt="">
