--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             </div>
             - Визуализация виртуального космоса и виртуального спутника (веб-приложение).
             Приведение в порядок пользовательского интерфейса, переход на новый дизайн, переход на новый движок
-            BabylonJS -> ThreeJS, доработка деталей космоса и спутника, переход на React;<br>
+            BabylonJS -> ThreeJS, доработка деталей космоса и спутника, переход на React. Сейчас переход на новый дизайн выглядит
+            <a style="font-weight: 700" href="https://gentle-reef-91699.herokuapp.com/">так</a>;<br>
             <div class="photos">
                 <img src="./images/space.png" alt="" class="screenshots">
                 <img src="./images/space2.png" alt="" class="screenshots">
