--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
     </div>
     <div class="performance">
         <a class="performance_main1">
-            Учебный опыт
+            Опыт программирования
         </a>
         <a class="performance_main2">
             
         </a>
         <div class="performance_flex">
             <div class="performance_time">
-                Сентябрь 2019 - Октябрь 2021 <br>(2 года)
+                Сентябрь 2019 - Март 2022 <br>(3 года)
             </div>
             <div class="performance_basic">
                 <div >Первый год</div>Алгоритмизация на примере c++, написал графопостроитель с помощью обратной польской записи<br><br><br>
                 <div>Второй год</div>ООП на c++(несколько учебных приложений в QT), изучение основ Python, SQL(база данных футбольного клуба),
                 погружение во frontend, изучение нативного JavaScript, HTML, CSS<br><br><br>
-                <div>Третий год</div>React-Redux и TypeScript, Bootstrap
+                <div>Третий год</div>React и TypeScript
             </div>
         </div>
     </div>
@@ -80,9 +80,11 @@
             - знания Figma, Bootstrap;<br>
             - знание SQL, Python;<br>
             - хорошие знания алгоритмов для frontend разработчика;<br>
-            - Базовые React-Redux;<br>
+            - Знание функционального React'а;<br>
             - Понимание клиент-серверного взаимодействия;<br>
-            - опыт работы с git
+            - опыт работы с git;<br>
+            - могу написать не трудный бэк на expressJS;<br>
+            - знаю как собрать проект с помощью webpack
         </div>
     </div>
     <div class="projects">
@@ -98,8 +100,7 @@
             </div>
             - Визуализация виртуального космоса и виртуального спутника (веб-приложение).
             Приведение в порядок пользовательского интерфейса, переход на новый дизайн, переход на новый движок
-            BabylonJS -> ThreeJS, доработка деталей космоса и спутника, переход на React. Сейчас переход на новый дизайн выглядит
-            <a style="font-weight: 700" href="https://gentle-reef-91699.herokuapp.com/">так</a>;<br>
+            BabylonJS -> ThreeJS, доработка деталей космоса и спутника, переход на React.
             <div class="photos">
                 <img src="./images/space.png" alt="" class="screenshots">
                 <img src="./images/space2.png" alt="" class="screenshots">
