--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div style="font-size: 16px" class="main_info2">
             131313pasha@mail.ru
         </div>
+        <div style="font-size: 16px" class="main_info2">
+            <a href="https://t.me/pashac13">Telegram</a> - предпочитаемый способ связи
+        </div>
     </div>
     <div class="main_photo">
         <img src="images/20210208_145123.jpg" alt="">
@@ -42,16 +45,17 @@
     </a>
     <div class="performance_flex">
         <div class="performance_time">
-            Сентябрь 2019 - Март 2022 <br>(3 года)
+            Сентябрь 2019 - Апрель 2022 <br>
         </div>
         <div class="performance_basic">
-            <div>Первый год</div>
-            Алгоритмизация на примере c++, написал графопостроитель с помощью обратной польской записи<br><br><br>
-            <div>Второй год</div>
-            ООП на c++(несколько учебных приложений в QT), изучение основ Python, SQL(база данных футбольного клуба),
-            погружение во frontend, изучение нативного JavaScript, HTML, CSS<br><br><br>
-            <div>Третий год</div>
-            React и TypeScript
+            Сначала изучал алгоритмизацию на с++, написал графопостроитель с помощью обратной польской записи (вводишь
+            буквами и числами функцию, он строит график, переводя строковый тип функции в числовой).<br>
+            Дальше познакомился с ООП на c++(несколько учебных приложений в QT), изучал основы Python-а, SQL(запросы,
+            триггеры, процедуры, спроектировали в команде базу данных футбольного клуба).<br>
+            В конце-концов понравилась работа в браузере, погрузился во frontend, изучил нативный JavaScript, HTML,
+            CSS.<br>
+            Поучаствовал в boostcamp от компании КРОК, закрепил знания javascript, познакомился немного с коммерческой
+            разработкой, и начал освоение React и TypeScript, nodeJS.
         </div>
     </div>
 </div>
@@ -78,13 +82,15 @@
         Знания и навыки
     </div>
     <div class="know_basic">
-        - достаточные знания HTML5, CSS3 (SCSS), JS (ES5-6) для коммерческой разработки;<br>
+        - знания HTML5 и CSS3 (SCSS) - для вёрстки большинства сайтов, JS - очень хорошие знания базы (асинхронность,
+        замыкание, классы, DOM, прототипы и т.д.);<br>
         - опыт адаптивной верстки путём media-запросов;<br>
         - знания Figma, Bootstrap;<br>
         - знание SQL, Python;<br>
-        - хорошие знания алгоритмов для frontend разработчика;<br>
-        - Знание функционального React'а;<br>
-        - Понимание клиент-серверного взаимодействия;<br>
+        - опыт написания алгоритмов и структур данных (из курса по алгоритмизации на с++);<br>
+        - знание функционального React'а (react-router, hooks, жизненный цикл компонента с помощью хуков);<br>
+        - опыт написания 3D в браузере с помощью ThreeJS;<br>
+        - понимание клиент-серверного взаимодействия;<br>
         - опыт работы с git;<br>
         - могу написать не трудный бэк на expressJS;<br>
         - знаю как собрать проект с помощью webpack
@@ -96,7 +102,7 @@
     </div>
     <div class="know_basic">
         - Автоматизация процесса управления конвейером и информирование сотрудников о выполнении плана.
-        Разработка веб-приложения для данной цели;<br>
+        Разработка веб-приложения для данной цели (приложение написано на boostcamp'е в компании КРОК);<br>
         <div class="photos">
             <img class="screenshots" src="./images/monitor.png" alt="">
             <img src="./images/admin.png" alt="" class="screenshots">
@@ -104,15 +110,17 @@
         - Визуализация виртуального космоса и виртуального спутника (веб-приложение).
         Приведение в порядок пользовательского интерфейса, переход на новый дизайн, переход на новый движок
         BabylonJS -> ThreeJS, доработка деталей космоса и спутника, переход на React.
+        <a href="https://space.miem.hse.ru/">ССЫЛКА</a>
         <div class="photos">
             <img src="./images/space.png" alt="" class="screenshots">
             <img src="./images/space2.png" alt="" class="screenshots">
         </div>
-        - Разработка интерфейса приложения (нашего факультета) статистических данных, результатов работы data
+        - Разработка интерфейса веб-приложения (нашего факультета) статистических данных, результатов работы data
         scientist'ов (на React);<br>
         <a href="https://9lpasha.github.io/snils/" class="verstka">- Вёрстка страницы сайта (отборочное задание на
             стажировку)</a>;<br>
-        - Веб-приложение для редактирования локальной базы данных в реальном времени;
+        - Веб-приложение для редактирования локальной базы данных в реальном времени; <br>
+        - Небольшой инструмент (задание для стажировки) - <a href="https://9lpasha.github.io/outside-digital/">ССЫЛКА</a>;
     </div>
 </div>
 </body>
