--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <img src="./images/space2.png" alt="" class="screenshots">
         </div>
         - Разработка интерфейса веб-приложения (нашего факультета) статистических данных, результатов работы data
-        scientist'ов (на React);<br>
+        scientist'ов (на React) - <a href="https://portfolio.miem.hse.ru/project-graph">ССЫЛКА</a>;<br>
         <a href="https://9lpasha.github.io/snils/" class="verstka">- Вёрстка страницы сайта (отборочное задание на
             стажировку)</a>;<br>
         - Веб-приложение для редактирования локальной базы данных в реальном времени; <br>
