--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         scientist'ов (на React) - <a href="https://portfolio.miem.hse.ru/project-graph">ССЫЛКА</a>;<br>
         <a href="https://9lpasha.github.io/snils/" class="verstka">- Вёрстка страницы сайта (отборочное задание на
             стажировку)</a>;<br>
+        - Аналог аудиоплеера вк - <a href="https://9lpasha.github.io/VKmusic/">ССЫЛКА</a>;<br>
+        <a href="https://9lpasha.github.io/snils/" class="verstka">- Вёрстка страницы сайта (отборочное задание на
+            стажировку)</a>;<br>
         - Веб-приложение для редактирования локальной базы данных в реальном времени; <br>
         - Небольшой инструмент (задание для стажировки) - <a href="https://9lpasha.github.io/outside-digital/">ССЫЛКА</a>;
     </div>
