--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         - Аналог аудиоплеера вк - <a href="https://9lpasha.github.io/VKmusic/">ССЫЛКА</a>;<br>
         - Веб-приложение для редактирования локальной базы данных в реальном времени; <br>
         - Небольшой инструмент (задание для стажировки) - <a href="https://9lpasha.github.io/outside-digital/">ССЫЛКА</a>;
+        - Тестовое задание: <a href="https://9lpasha.github.io/miniGame-React-Redux/">React + typescript + redux</a>
     </div>
 </div>
 </body>
