--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <a href="https://9lpasha.github.io/snils/" class="verstka">- Вёрстка страницы сайта (отборочное задание на
             стажировку)</a>;<br>
         - Аналог аудиоплеера вк - <a href="https://9lpasha.github.io/VKmusic/">ССЫЛКА</a>;<br>
-        - Веб-приложение для редактирования локальной базы данных в реальном времени; <br>
+        - Веб-приложение для редактирования локальной базы данных в реальном времени (expressJS + reactJS); <br>
         - Небольшой инструмент (задание для стажировки) - <a href="https://9lpasha.github.io/outside-digital/">ССЫЛКА</a>;<br>
         - Тестовое задание: <a href="https://9lpasha.github.io/miniGame-React-Redux/">React + typescript + redux</a>
     </div>
